<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_interface</name>
  <version>1.0.0</version>

  <description>

    dynamixel_interface aims to provide a fast, scalable and easily configurable
    interface for controlling the Robotis 'Dynamixel' brand of servo motors. It
    is implemented in c++ and is based on the official robotis dynamixel_sdk.
    The controller is designed to handle many dynamixels at once and can
    synchronously communicate with dynamixels spread across multiple serial ports.
    The controller can run in either position, velocity or torque control modes
    and is easily configured with an external yaml file.

  </description>

  <maintainer email="Thomas.Molnar@data61.csiro.au">Tom Molnar</maintainer>

  <license>CSIRO Open Source Software License Agreement (variation of the BSD / MIT License)</license>

  <!-- This package is based on the dynamixel_pro_controller v0.8.4 package written by Brian Axelrod -->
  <author>Tom Molnar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>yaml-cpp</depend>
  <depend>xmlrpcpp</depend>
  <depend>setserial</depend>

  <export>
  </export>
</package>
