<?xml version="1.0"?>
<package>
  <name>dynamixel_controller</name>
  <version>1.0.0</version>
  <description>A controller for commanding the dynamixel series of servos</description>
 
  <maintainer email="Thomas.Molnar@data61.csiro.au">Tom Molnar</maintainer>


  <license>BSD</license>


  <!-- This package is based on the dynamixel_pro_controller v0.8.4 package written by Brian Axelrod -->  
  <author email="tom.molnar@data61.csiro.au">Tom Molnar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_driver</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>dynamixel_driver</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>boost</run_depend>

  <export>
  </export>
</package>