<?xml version="1.0"?>
<package>
  <name>dynamixel_interface</name>
  <version>0.1.0</version>
  <description>The dynamixel_interface stack. Provides a fast and easily configurable interface for controlling many dynamixels at once.
  Supports all variants of the Pro, MX and XM series of motors. Please see the dynamixel_interface_controller package for tutorials and setup.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="Thomas.Molnar@data61.csiro.au">Tom Molnar</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>CSIRO Open Source Software License Agreement (variation of the BSD / MIT License)</license>

  <author>Tom Molnar</author>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/dynamixel_suite</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dynamixel_interface_driver</run_depend>
  <run_depend>dynamixel_interface_controller</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <Metapackage />
  </export>
</package>
