<?xml version="1.0"?>
<package>
  <name>dynamixel_interface_controller</name>
  <version>0.1.0</version>
  <description>A controller for commanding the dynamixel series of servos. Provides abstraction of the synchronous reading and writing of many dynamixels across multiple serial ports to two ros topics. The controller can read and publish synchronously from multiple serial ports through different instances of dynamixel_interface_driver. The controller can run in either position, velocity or torque control modes and is easily configured with an externam yaml file.</description>
 

  <maintainer email="Thomas.Molnar@data61.csiro.au">Tom Molnar</maintainer>



  <license>CSIRO Open Source Software License Agreement (variation of the BSD / MIT License)</license>



  <!-- This package is based on the dynamixel_pro_controller v0.8.4 package written by Brian Axelrod -->  
  <author>Tom Molnar</author>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_interface_driver</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>dynamixel_interface_driver</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>boost</run_depend>

  <export>
  </export>
</package>