<?xml version="1.0"?>
<package>
  <name>dynamixel_interface_driver</name>
  <version>0.1.0</version>
  <description>Driver for handling serial IO with the dynamixel series of servos. used by dynamixel_controller to handle all communications on a single serial port. The implementation of dynamixel_interface_driver is based on the Dynamixel SDK v3.4.1</description>

  <maintainer email="Thomas.Molnar@data61.csiro.au">Tom Molnar</maintainer>

  <license>CSIRO Open Source Software License Agreement (variation of the BSD / MIT License)</license>

  <!-- This package is based on the dynamixel_pro_driver package written by Brian Axelrod -->  
  <author>Tom Molnar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>